--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,15 @@ before_install:
 
 script: 
   - docker run -e CI=true jlee1114/docker-react npm run test
-  
+
+deploy: 
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "fronend"
+  env: "Fronend-env"
+  bucket_name: "elasticbeanstalk-us-east-2-722221669437"
+  bucket_path: "fronend"
+  on:
+    branch: main 
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
